--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Mynerve:&subset=latin,latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Tilt+Neon:&subset=latin,latin-ext');
 
-body{ background-image: linear-gradient(to bottom, #0000A0 0%, #0002FF 30%, #1974D2 70% );}
+/*  Background art by Sarah Blackhouse, https://projects.verou.me/css3patterns/#lined-paper */
+body{
+  background-color: #fff;
+  background-image:
+  linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+  linear-gradient(#eee .1em, transparent .1em);
+  background-size: 100% 3em;
+}
 
 .intro-container{ padding-top: 25vh; }
 
 .intro-one, .intro-two{
   font-family: Mynerve;
-  color: #fff;
+  color: #000;
   padding-bottom: 2vh;
 }
 
 .intro-one{ font-size: 48px; }
 
-.intro-two{ font-size: 24px;  }
+.intro-two{ font-size: 24px; }
 
 .barrier{ margin: 3vh 0; }
 
@@ -33,7 +40,7 @@ body{ background-image: linear-gradient(to bottom, #0000A0 0%, #0002FF 30%, #197
 
 .about ul{ margin-left: 5vw;}
 
-.about ul li{ color: #fff; }
+.about ul li{ color: #000; }
 
 .about-intro, .about-statement, .about-statement span{
   color: #fff;
