--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Mynerve:&subset=latin,latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Tilt+Neon:&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 
-/*  Background art by Sarah Blackhouse, https://projects.verou.me/css3patterns/#lined-paper */
-body{
-  background-color: #fff;
-  background-image:
-  linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
-  linear-gradient(#eee .1em, transparent .1em);
-  background-size: 100% 3em;
-}
 
-.intro-container{ padding-top: 25vh; }
-
+.intro-container{ padding-top: 25vh;}
 .intro-one, .intro-two{
-  font-family: Mynerve;
+  font-family: Orbitron;
   color: #000;
   padding-bottom: 2vh;
 }
 
-.intro-one{ font-size: 48px; }
+.intro-one{ font-size: 64px; 
+}
 
 .intro-two{ font-size: 24px; }
 
@@ -33,8 +25,7 @@ body{
 
 /* About Section */
 
-.about{ 
-  margin: 10vh 0 0 4vw;}
+.about{ margin: 10vh 0 0 4vw; }
 
 .about p { margin-left: 2vw;}
 
@@ -43,8 +34,8 @@ body{
 .about ul li{ color: #000; }
 
 .about-intro, .about-statement, .about-statement span{
-  color: #fff;
-  font-family: Tilt Neon;
+  color: #000;
+  font-family: Orbitron;
   font-weight: bold;
 }
 
