New nav button, more css changes.

--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -3,9 +3,10 @@
     display:flex;
 }
 
-.inner{margin: auto;}
+.inner{margin: 0;}
 
 .card-icons{ font-size: 36px; }
+
 
 .rails-icon{color: #cc0000;}
 
