--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Tilt+Neon:&subset=latin,latin-ext');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 
-
 body{background-color: #E5E4E2;}
 
 .intro-container{ padding-top: 25vh;}
@@ -10,8 +9,7 @@ body{background-color: #E5E4E2;}
   color: #000;
 }
 
-.intro-one{ font-size: 64px; 
-}
+.intro-one{ font-size: 64px; }
 
 .intro-two{ font-size: 24px; }
 
