--- a/src/components/Navigation/menu.css
+++ b/src/components/Navigation/menu.css
@@ -4,7 +4,7 @@ header {
 
 
 aside {
-    background-color: #c4a8ff;
+    background-color: blue;
     width: 18.75rem;
     height: 100vh;
   }
@@ -13,24 +13,64 @@ aside {
     margin: 4.5rem 1.4rem;
   }
   
-  .btn-container {
-    position: fixed;
-  }
-  
   .container a {
-    color: #f9fafb;
+    color: #fff;
     text-decoration: none;
+    font-family: Orbitron;
     font-size: 1.75rem;
     font-weight: 600;
     display: block;
     margin: 20px;
+
   }
-  
+
   button {
     cursor: pointer;
     margin: 1.25rem;
     border: none;
     padding: 0.5rem 1rem;
     background-color: #f9fafb;
+    border-radius: 12px;
   }
+
+  /* Mobile menu button transformation */
+
+  .lineTop, .lineBottom, .lineMiddle{
+    width: 24px;
+    height: 2px;
+    border-radius: 10px;
+    background: rgb(14, 13, 13);
+    left: 0;
+    right: 0;
+    transform: all 0.4s;
+    transition: all 0.7s;
+    margin: 2px;
+  }
+
+  .lineTop {
+    top: 2.2em;
+
+  }
+
+  .lineMiddle{
+    top: 2.8em;
+  }
+  .lineBottom {
+    top: 3.4em;
+  }
+
+  .lineTop.spin {
+    top: 2.35em;
+    transform: rotate(135deg);
+    background: #000;
+    margin: -2px;
+  }
+
+.lineBottom.spin, .lineMiddle.spin {
+  top: 2.35em;
+  transform: rotate(225deg);
+  background: #000;
+  margin: -2px;
+}
+
   
