--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body{background-color: #E5E4E2;}
 /* About Section */
 
 .about{ 
-  margin: 10vh 0 0 4vw; 
+  margin-top: 10vh; 
   padding: 5px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   border-radius: 12px;
