--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Tilt+Neon:&subset=latin,latin-ext');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 
 body{background-color: #E5E4E2;}
@@ -16,6 +15,8 @@ body{background-color: #E5E4E2;}
 .barrier{ margin: 3vh 0; }
 
 .home-card{ margin-top: 4vh;}
+
+.recent{ font-size: 40px;}
 
 #section1, #section2, #section4{
   min-height: 100vh;
@@ -42,7 +43,7 @@ body{background-color: #E5E4E2;}
 
 .about ul li{ color: #000; }
 
-.about-intro, .about-statement, .about-statement span{
+.about-intro, .recent, .about-statement, .about-statement span{
   color: #000;
   font-family: Orbitron;
   font-weight: bold;
